# EventManagement

./: .env.ini  README.md  pyproject.toml
authentication/: serializers.py  views.py
core/: settings.py  urls.py
events/: filters.py  models.py  serializers.py  urls.py  utils.py  views.py
events/migrations/: 0001_initial.py
events/templates/: event_registration_email.html
